# iwritesqlbutnotdbt

./: pyproject.toml
defs/ingest_files/: component.yaml
defs/sql/: component.yaml
iwritesqlbutnotdbt/defs/sql/: component.yaml
iwritesqlbutnotdbt/lib/: __init__.py  sql_component.py
